<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/grupo2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@string/light"
        android:text="OUR MENU"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/btn_coldDrink"
                android:layout_marginRight="2dp"
                android:background="@drawable/color_degradado"
                android:textAllCaps="false"
                android:text="@string/cold_drniks"
                android:textColor="@color/dustyWhite"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/btn_hotDrink"
                android:layout_marginLeft="2dp"
                android:background="@drawable/color_degradado"
                android:text="@string/hot_drinks"
                android:textAllCaps="false"
                android:textColor="@color/dustyWhite"
                android:textSize="18dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/btn_sweets"
                android:layout_marginRight="2dp"
                android:background="@drawable/color_degradado"
                android:text="@string/sweets"
                android:textAllCaps="false"
                android:textColor="@color/dustyWhite"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/btn_salties"
                android:layout_marginLeft="2dp"
                android:background="@drawable/color_degradado"
                android:text="@string/salties"
                android:textAllCaps="false"
                android:textColor="@color/dustyWhite"
                android:textSize="18dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_combos"
                android:layout_marginRight="2dp"
                android:background="@drawable/color_degradado"
                android:text="@string/combos"
                android:textAllCaps="false"
                android:textColor="@color/dustyWhite"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/btn_personalized"
                android:layout_marginLeft="2dp"
                android:background="@drawable/color_degradado"
                android:text="@string/personalized"
                android:textAllCaps="false"
                android:textColor="@color/dustyWhite"
                android:textSize="18dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>